# PETScSolver

./: CMakeLists.txt  FindPETSc.cmake  README.md  cxx_main.C  run_test.sh  runtest.cmake  vtk_diff.py
GetPot/: GetPot
Testing/expected/: HeatCond1D_MF_step_20.vtu  HeatCond1D_step_40.vtk  HeatCond1D_step_40.vtu  LaxRiemannProblem_step_160.vtu  LaxRiemannProblem_step_80.vtk  LaxRiemannProblem_step_80.vtu  Manometer_4E1P_2nd_step_100.vtu  Manometer_4E1P_2nd_step_20.vtu  Manometer_4E1P_2nd_step_60.vtu  Manometer_4E1P_2nd_step_600.vtu  Manometer_6E1P_2nd_step_100.vtu  Manometer_6E1P_2nd_step_600.vtu  Sedimentation_4E1P_2nd_step_100.vtu  Sedimentation_4E1P_2nd_step_2000.vtu  Sedimentation_6E1P_2nd_step_100.vtu  Sedimentation_6E1P_2nd_step_1000.vtu  SineWave_4E1P_2nd_step_40.vtu  SineWave_4E1P_2nd_step_5.vtu  SineWave_4E1P_step_40.vtu  SineWave_4E1P_step_5.vtu  SinglePhaseChannel_2nd_step_20.vtk  SinglePhaseChannel_2nd_step_20.vtu  SinglePhaseChannel_2nd_step_5.vtk  SinglePhaseChannel_2nd_step_5.vtu  SinglePhaseChannel_step_20.vtu  SinglePhaseChannel_step_5.vtk  SinglePhaseChannel_step_5.vtu  SinglePhaseFlow_2nd_step_20.vtk  SinglePhaseFlow_2nd_step_20.vtu  SinglePhaseFlow_2nd_step_5.vtk  SinglePhaseFlow_2nd_step_5.vtu  SinglePhaseFlow_step_20.vtk  SinglePhaseFlow_step_20.vtu  SinglePhaseFlow_step_5.vtk  SinglePhaseFlow_step_5.vtu  SodShockTube_step_20.vtk  SodShockTube_step_20.vtu  SodShockTube_step_40.vtu  SquareWave_4E1P_2nd_step_10.vtu  SquareWave_4E1P_2nd_step_40.vtu  (+10 more)
Testing/input/: HeatCond1D.i  HeatCond1D_MF.i  LaxRiemannProblem.i  Manometer_4E1P_2nd.i  Manometer_6E1P_2nd.i  Sedimentation_4E1P_2nd.i  Sedimentation_6E1P_2nd.i  SineWave_4E1P.i  SineWave_4E1P_2nd.i  SinglePhaseChannel.i  SinglePhaseChannel_2nd.i  SinglePhaseFlow.i  SinglePhaseFlow_2nd.i  SodShockTube.i  SquareWave_4E1P_2nd.i  WaterFaucet_4E1P_2nd.i  WaterFaucet_5E2P_SG_BDF1_1st.i  WaterFaucet_6E1P_1st.i  WaterFaucet_6E1P_2nd.i  pseudo3d.i
fluids/: SinglePhaseFluid.h  SteamIF97.C  SteamIF97.h  WaterIF97.C  WaterIF97.h  cp_g.txt  cp_l.txt  e_g.txt  e_l.txt  h_g.txt  h_l.txt  k_g.txt  k_l.txt  mu_g.txt  mu_l.txt  rho_g.txt  rho_l.txt
input/: HeatCond1D.i  SodShockTube.i  WaterFaucet_5E2P.i
output/: dummy-empty-file
output/expected/: EulerEquation1D_step_20.vtk  EulerEquation1D_step_40.vtk  LaxRiemannProblem_step_160.vtk  LaxRiemannProblem_step_80.vtk  SodShockTube_step_40.vtk  Solution_step_20.vtk  WaterFaucet_5E2P_SG_BDF1_1st_step_20.vtk  WaterFaucet_5E2P_SG_BDF1_1st_step_40.vtk
parser/: InputParser.C  InputParser.h  ParameterList.C  ParameterList.h
problems/: EulerEquation1D.C  EulerEquation1D.h  FiveEqnTwoP_StagGrid.C  FiveEqnTwoP_StagGrid.h  FourEqnOneP.C  FourEqnOneP.h  HeatConduction1D.C  HeatConduction1D.h  PETScProblem.C  PETScProblem.h  PETScProblemInterface.C  PETScProblemInterface.h  SinglePhaseFlow.C  SinglePhaseFlow.h  SixEqnOneP.C  SixEqnOneP.h
system/: ProblemSystem.C  ProblemSystem.h  Pseudo3D.C  Pseudo3D.h  SinglePhaseChannel.C  SinglePhaseChannel.h  SinglePhaseFields.C  SinglePhaseFields.h  pBC.C  pBC.h  vBC.C  vBC.h
utils/: ParameterList.C  ParameterList.h  SinglePhaseFluid.C  SinglePhaseFluid.h  utils.C  utils.h
